JDK-8256950: Add record attribute support to symbol generator CreateSymbols